--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: aiida-codtools
+name: ci
 
 on: [push, pull_request]
 
@@ -66,7 +66,7 @@ jobs:
 
         strategy:
             matrix:
-                python-version: ['3.6', '3.7', '3.8']
+                python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
 
         services:
             postgres:
