--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,116 +4,99 @@ on: [push, pull_request]
 
 jobs:
 
-  docs:
+    docs:
 
-    runs-on: ubuntu-latest
+        runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v1
+        steps:
+        -   uses: actions/checkout@v1
 
-    - name: Cache python dependencies
-      id: cache-pip
-      uses: actions/cache@v1
-      with:
-        path: ~/.cache/pip
-        key: pip-docs-${{ hashFiles('**/setup.json') }}
-        restore-keys: |
-          pip-docs-
+        -   name: Cache python dependencies
+            id: cache-pip
+            uses: actions/cache@v1
+            with:
+                path: ~/.cache/pip
+                key: pip-docs-${{ hashFiles('**/setup.json') }}
+                restore-keys: pip-docs-
 
-    - name: Set up Python
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
+        -   name: Set up Python
+            uses: actions/setup-python@v2
+            with:
+                python-version: '3.8'
 
-    - name: Install python dependencies
-      run:
-        pip install -e .[docs]
+        -   name: Install Python dependencies
+            run: pip install -e .[docs]
 
-    - name: Build documentation
-      env:
-        READTHEDOCS: 'True'
-      run:
-        SPHINXOPTS='-nW' make -C docs html
+        -   name: Build documentation
+            env:
+                READTHEDOCS: 'True'
+            run: SPHINXOPTS='-nW' make -C docs html
 
-  pre-commit:
+    pre-commit:
 
-    runs-on: ubuntu-latest
+        runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v1
+        steps:
+        -   uses: actions/checkout@v2
 
-    - name: Cache python dependencies
-      id: cache-pip
-      uses: actions/cache@v1
-      with:
-        path: ~/.cache/pip
-        key: pip-pre-commit-${{ hashFiles('**/setup.json') }}
-        restore-keys: |
-          pip-pre-commit-
+        -   name: Cache Python dependencies
+            uses: actions/cache@v1
+            with:
+                path: ~/.cache/pip
+                key: pip-pre-commit-${{ hashFiles('**/setup.json') }}
+                restore-keys:
+                    pip-pre-commit-
 
-    - name: Set up Python
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
+        -   name: Set up Python
+            uses: actions/setup-python@v2
+            with:
+                python-version: '3.8'
 
-    - name: Install python dependencies
-      run:
-        pip install -e .[dev]
+        -   name: Install Python dependencies
+            run: |
+                pip install --upgrade pip setuptools wheel
+                pip install -e .[dev]
 
-    - name: Run pre-commit
-      run:
-        pre-commit run --all-files || ( git status --short ; git diff ; exit 1 )
+        -   name: Run pre-commit
+            run: pre-commit run --all-files || ( git status --short ; git diff ; exit 1 )
 
-  tests:
+    tests:
 
-    runs-on: ubuntu-latest
+        runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        python-version: [3.5, 3.6, 3.7, 3.8]
+        strategy:
+            matrix:
+                python-version: ['3.5', '3.6', '3.7', '3.8']
 
-    services:
-      postgres:
-        image: postgres:10
-        env:
-          POSTGRES_DB: test_${{ matrix.backend }}
-          POSTGRES_PASSWORD: ''
-          POSTGRES_HOST_AUTH_METHOD: trust
-        ports:
-          - 5432:5432
-      rabbitmq:
-        image: rabbitmq:latest
-        ports:
-          - 5672:5672
+        services:
+            postgres:
+                image: postgres:12
+            rabbitmq:
+                image: rabbitmq:latest
+                ports:
+                -   5672:5672
 
-    steps:
-    - uses: actions/checkout@v2
+        steps:
+        -   uses: actions/checkout@v2
 
-    - name: Cache python dependencies
-      id: cache-pip
-      uses: actions/cache@v1
-      with:
-        path: ~/.cache/pip
-        key: pip-${{ matrix.python-version }}-tests-${{ hashFiles('**/setup.json') }}
-        restore-keys: |
-          pip-${{ matrix.python-version }}-tests
+        -   name: Cache Python dependencies
+            uses: actions/cache@v1
+            with:
+                path: ~/.cache/pip
+                key: pip-${{ matrix.python-version }}-tests-${{ hashFiles('**/setup.json') }}
+                restore-keys:
+                    pip-${{ matrix.python-version }}-tests
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
+        -   name: Set up Python ${{ matrix.python-version }}
+            uses: actions/setup-python@v2
+            with:
+                python-version: ${{ matrix.python-version }}
 
-    - name: Install system dependencies
-      run: |
-        sudo apt update
-        sudo apt install postgresql-10
+        -   name: Install Python dependencies
+            run: |
+                pip install --upgrade pip setuptools wheel
+                pip install -e .[dev]
+                reentry scan
 
-    - name: Install python dependencies
-      run: |
-        pip install --upgrade setuptools
-        pip install -e .[dev]
-        reentry scan
-
-    - name: Run pytest
-      run:
-        pytest -sv tests
+        -   name: Run pytest
+            run: pytest -sv tests
