--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,34 +1,39 @@
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.2.3
-  hooks:
-  - id: trailing-whitespace
-  - id: double-quote-string-fixer
+repos:
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.1.0
+    hooks:
+    -   id: double-quote-string-fixer
+    -   id: end-of-file-fixer
+    -   id: fix-encoding-pragma
+    -   id: mixed-line-ending
+    -   id: trailing-whitespace
 
-- repo: local
-  hooks:
+-   repo: https://github.com/ikamensh/flynt/
+    rev: '0.76'
+    hooks:
+    -   id: flynt
 
-  - id: yapf
-    name: yapf
-    entry: yapf
-    language: system
-    types: [python]
-    args: ['-i']
-    exclude: &exclude_files >
-      (?x)^(
-        docs/.*|
-      )$
+-   repo: https://github.com/pycqa/isort
+    rev: '5.10.1'
+    hooks:
+    -   id: isort
 
-  - id: prospector
-    name: prospector
-    description: 'Run prospector'
-    language: system
-    types: [file, python]
-    exclude: *exclude_files
-    entry: prospector
+-   repo: https://github.com/pre-commit/mirrors-yapf
+    rev: v0.32.0
+    hooks:
+    -   id: yapf
+        name: yapf
+        types: [python]
+        args: ['-i']
+        exclude: &exclude_files >
+            (?x)^(
+                docs/.*|
+            )$
+        additional_dependencies: ['toml']
 
-  - id: version-number
-    name: Check consistency in version number
-    entry: python ./utils/validate_version_number.py
-    language: system
-    files: '^(setup.json)'
-    pass_filenames: false
+-   repo: https://github.com/PyCQA/pylint
+    rev: v2.12.2
+    hooks:
+    -   id: pylint
+        language: system
+        exclude: *exclude_files
