--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,10 +65,7 @@ jobs:
                 python-version: ${{ matrix.python-version }}
 
         -   name: Install Python dependencies
-            run: |
-                pip install --upgrade pip setuptools wheel
-                pip install -e .[dev]
-                reentry scan
+            run: pip install -e .[dev]
 
         -   name: Run pytest
             run: pytest -sv tests
