--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,7 @@ classifiers = [
 keywords = ['aiida', 'workflows']
 requires-python = '>=3.8'
 dependencies = [
-    'aiida-core[atomic_tools]~=1.0',
-    'click~=7.0',
+    'aiida-core[atomic_tools]~=2.0.0b1',
 ]
 
 [project.urls]
@@ -35,6 +34,7 @@ dev = [
     'pgtest~=1.3',
     'pre-commit~=2.17',
     'pylint~=2.12.2',
+    'pylint-aiida~=0.1',
     'pytest~=6.0',
     'pytest-regressions~=1.0',
     'toml'
@@ -109,6 +109,7 @@ disable = [
     'bad-continuation',
     'duplicate-code',
     'import-outside-toplevel',
+    'too-many-return-statements',
 ]
 
 [tool.pylint.basic]
@@ -122,7 +123,6 @@ testpaths = [
 filterwarnings = [
     'ignore::DeprecationWarning:frozendict:',
     'ignore::DeprecationWarning:pkg_resources:',
-    'ignore::DeprecationWarning:reentry:',
     'ignore::DeprecationWarning:sqlalchemy_utils:',
 ]
 
